Update event listeners to handle event based on ResourceEvent enum